layout bugfixes

--- a/templates/we1rdo/css/style.css
+++ b/templates/we1rdo/css/style.css
@@ -81,9 +81,10 @@ div.logininfo p a {background:url(../img/sprite.png) no-repeat -88px -112px;}
 div.closeadminpanel,
 div.closeuserpreferences { float: left; }
 div.closeadminpanel p,
-div.closeuserpreferences p {margin:2px 2px 0 0; line-height:18px; color:#fff; padding:0 5px 0 3px; background:url(../img/sprite_x.png) repeat-x 0 -105px; border:1px solid #b5b5b5; -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px;}
+div.closeuserpreferences p {margin:2px 2px 0 5px; line-height:18px; color:#fff; padding:0 5px 0 3px; background:url(../img/sprite_x.png) repeat-x 0 -105px; border:1px solid #b5b5b5; -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px;}
 div.closeadminpanel p a,
 div.closeuserpreferences p a {background:url(../img/sprite.png) no-repeat -88px -164px; font:11px Arial, Helvetica, sans-serif normal; color:white; padding:0 0 0 18px; cursor:pointer; display:block; height:16px; line-height:15px; margin:2px 0 0 0; text-decoration: none;}
+form.edituserprefsform {margin:5px;}
 
 /* SIDEBAR */
 div#filter {width:235px; float:left; left:0; top:0; position:relative;}
@@ -381,7 +382,7 @@ div.details table.spotheader th.rating span.rating {float:right; display:block; 
 div.details table.spotheader th.rating span.rating span {display:block; height:10px; margin:4px 0 0 3px; background:url(../img/sprite_x.png) repeat-x 0 -127px;}
 div.details table.spotheader th.search {width:20px; min-width:20px; padding:0;}
 div.details table.spotheader th.search a {display:inline-block; width:17px; height:12px; float:left; background:url(../img/sprite.png) no-repeat 0 -129px; border-right:1px solid #fff;}
-div.details table.spotheader th.sabnzbd {width:20px; min-width:20px; padding:0;}
+div.details table.spotheader th.sabnzbd {width:20px; min-width:20px; padding:1px 0 0 0;}
 
 div.details table.spotinfo {width:100%; border-collapse:separate; border-spacing:5px 2px;}
 div.details table.spotinfo th,
@@ -467,8 +468,8 @@ div.versioncheck li.even {background-color:#fffce4;}
 
 div.versioncheck li:last-child,
 div.versioncheck li:last-child:first-child {-moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px;}
-div.versioncheck  li:first-child {-moz-border-radius:4px 4px 0 0; -webkit-border-radius:4px 4px 0 0; border-radius:4px 4px 0 0;}
-div.versioncheck  li:last-child {-moz-border-radius:0 0 4px 4px; -webkit-border-radius:0 0 4px 4px; border-radius:0 0 4px 4px;}
+div.versioncheck li:first-child {-moz-border-radius:4px 4px 0 0; -webkit-border-radius:4px 4px 0 0; border-radius:4px 4px 0 0;}
+div.versioncheck li:last-child {-moz-border-radius:0 0 4px 4px; -webkit-border-radius:0 0 4px 4px; border-radius:0 0 4px 4px;}
 
 /* STATISTIEKEN */
 div.statistics {margin:0 0 0 235px; padding:10px 5px 5px 0; min-width:750px; text-align:center;}
